--- a/.github/workflows/create-docker-image.yml
+++ b/.github/workflows/create-docker-image.yml
@@ -25,20 +25,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: tomellm/articles_collect
-
-      - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ github.sha }},latest
+      - name: Build Docker Image
+        run: docker build -t tomellm/articles_collect:${{ github.sha }} -t tomellm/articles_collect:latest .
+      
+      - name: Push Docker Image
+        run: docker push tomellm/articles_collect:${{ github.sha }} && docker push tomellm/articles_collect:latest
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
