--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [toolchain]
 channel = "nightly"
 
-[target.wasm32-unknown-unknown]
-rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
+#[target.wasm32-unknown-unknown]
+#rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
