--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -17,6 +17,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Install SASS
       run: npm install -g sass
+    - name: Add Nigthly
+      run: rustup toolchain install nightly
+        | rustup default nightly
     - name: Install Cargo Leptos
       run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/leptos-rs/cargo-leptos/releases/latest/download/cargo-leptos-installer.sh | sh
     - name: Add Wasm Target
@@ -29,5 +32,8 @@ jobs:
       
     steps:
     - uses: actions/checkout@v4
+    - name: Add Nigthly
+      run: rustup toolchain install nightly
+        | rustup default nightly
     - name: Run Tests
       run: cargo test --verbose
