--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -24,7 +24,6 @@ jobs:
       run: curl --proto '=https' --tlsv1.2 -LsSf https://github.com/leptos-rs/cargo-leptos/releases/latest/download/cargo-leptos-installer.sh | sh
     - name: Add Wasm Target
       run: rustup target add wasm32-unknown-unknown
-        | cargo update -p wasm-bindgen --precise 0.2.104
     - name: Leptos Build
       run: cargo leptos build --release -vv
       
@@ -35,6 +34,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Add Nigthly
       run: rustup toolchain install nightly
-        | rustup default nightly
+    - name: Set Nightly Default
+      run: rustup default nightly
     - name: Run Tests
       run: cargo test --verbose
