--- a/web_app/Cargo.toml
+++ b/web_app/Cargo.toml
@@ -19,6 +19,7 @@ leptos_router = { version = "0.8.8", features = ["nightly"] }
 leptos_axum = { version = "0.8.6", optional = true }
 leptos_meta = { version = "0.8.5" }
 leptos-use = "0.16.3"
+leptos_oidc = "0.9.0" # https://gitlab.com/kerkmann/leptos_oidc/-/tree/main
 
 axum = { version = "0.8", optional = true, features = ["macros"] }
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
@@ -29,7 +30,7 @@ tower-http = { version = "0.6.6", features = ["fs", "trace"], optional = true }
 
 console_error_panic_hook = { version = "0.1", optional = true}
 wasm-bindgen = { version = "=0.2.104", optional = true }
-leptos_oidc = "0.9.0" # https://gitlab.com/kerkmann/leptos_oidc/-/tree/main
+web-sys = { version = "0.3.81", features=["HtmlTextAreaElement"] }
 
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", optional = true }
